assign4/y.output
Terminals unused in grammar

   STRUCT
   TYPEDEF
   UNION


Rules useless in parser due to conflicts

  115 identifier_opt: IDENTIFIER


State 24 conflicts: 21 shift/reduce
State 25 conflicts: 21 shift/reduce
State 27 conflicts: 21 shift/reduce
State 28 conflicts: 21 shift/reduce
State 32 conflicts: 1 reduce/reduce
State 38 conflicts: 21 shift/reduce
State 55 conflicts: 1 shift/reduce, 2 reduce/reduce
State 60 conflicts: 1 shift/reduce
State 83 conflicts: 3 shift/reduce
State 87 conflicts: 1 shift/reduce
State 88 conflicts: 2 shift/reduce
State 92 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 100 conflicts: 46 shift/reduce, 1 reduce/reduce
State 172 conflicts: 1 shift/reduce
State 184 conflicts: 46 shift/reduce, 1 reduce/reduce
State 231 conflicts: 1 shift/reduce
State 232 conflicts: 1 shift/reduce
State 233 conflicts: 2 shift/reduce
State 234 conflicts: 2 shift/reduce
State 242 conflicts: 1 shift/reduce
State 244 conflicts: 1 shift/reduce
State 245 conflicts: 1 shift/reduce
State 247 conflicts: 25 shift/reduce
State 249 conflicts: 25 shift/reduce
State 272 conflicts: 1 shift/reduce
State 284 conflicts: 25 shift/reduce
State 306 conflicts: 25 shift/reduce
State 307 conflicts: 25 shift/reduce
State 308 conflicts: 25 shift/reduce
State 316 conflicts: 1 shift/reduce
State 323 conflicts: 25 shift/reduce
State 329 conflicts: 25 shift/reduce
State 332 conflicts: 25 shift/reduce


Grammar

    0 $accept: translation_unit END

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' argument_expression_list_opt ')'
    8                   | postfix_expression '.' IDENTIFIER
    9                   | postfix_expression ARROW_ACCESS IDENTIFIER
   10                   | postfix_expression INCREMENT
   11                   | postfix_expression DECREMENT
   12                   | '(' type_name ')' '{' initializer_list '}'
   13                   | '(' type_name ')' '{' initializer_list ',' '}'

   14 argument_expression_list_opt: argument_expression_list
   15                             | %empty

   16 argument_expression_list: assignment_expression
   17                         | argument_expression_list ',' assignment_expression

   18 unary_expression: postfix_expression
   19                 | INCREMENT unary_expression
   20                 | DECREMENT unary_expression
   21                 | unary_operator cast_expression
   22                 | SIZEOF unary_expression
   23                 | SIZEOF '(' type_name ')'

   24 unary_operator: '&'
   25               | '*'
   26               | '+'
   27               | '-'
   28               | '~'
   29               | '!'

   30 cast_expression: unary_expression
   31                | '(' type_name ')' cast_expression

   32 multiplicative_expression: cast_expression
   33                          | multiplicative_expression '*' cast_expression
   34                          | multiplicative_expression '/' cast_expression
   35                          | multiplicative_expression '%' cast_expression

   36 additive_expression: multiplicative_expression
   37                    | additive_expression '+' multiplicative_expression
   38                    | additive_expression '-' multiplicative_expression

   39 shift_expression: additive_expression
   40                 | shift_expression LEFT_SHIFT additive_expression
   41                 | shift_expression RIGHT_SHIFT additive_expression

   42 relational_expression: shift_expression
   43                      | relational_expression '<' shift_expression
   44                      | relational_expression '>' shift_expression
   45                      | relational_expression LESSER_EQUAL shift_expression
   46                      | relational_expression GREATER_EQUAL shift_expression

   47 equality_expression: relational_expression
   48                    | equality_expression IS_EQUAL relational_expression
   49                    | equality_expression NOT_EQUAL relational_expression

   50 and_expression: equality_expression
   51               | and_expression '&' equality_expression

   52 exclusive_or_expression: and_expression
   53                        | exclusive_or_expression '^' and_expression

   54 inclusive_or_expression: exclusive_or_expression
   55                        | inclusive_or_expression '|' exclusive_or_expression

   56 logical_and_expression: inclusive_or_expression
   57                       | logical_and_expression LOGICAL_AND logical_or_expression

   58 logical_or_expression: logical_and_expression
   59                      | logical_or_expression LOGICAL_OR logical_and_expression

   60 conditional_expression: logical_or_expression
   61                       | logical_or_expression '?' expression ':' conditional_expression

   62 assignment_expression: conditional_expression
   63                      | unary_expression assignment_operator assignment_expression

   64 assignment_operator: '='
   65                    | MULT_ASSIGN
   66                    | DIV_ASSIGN
   67                    | REM_ASSIGN
   68                    | ADD_ASSIGN
   69                    | SUB_ASSIGN
   70                    | LEFT_SHIFT_ASSIGN
   71                    | RIGHT_SHIFT_ASSIGN
   72                    | BITWISE_AND_ASSIGN
   73                    | BITWISE_XOR_ASSIGN
   74                    | BITWISE_OR_ASSIGN

   75 expression: assignment_expression
   76           | expression ',' assignment_expression

   77 constant_expression: conditional_expression

   78 declaration: declaration_specifiers init_declarator_list_opt

   79 init_declarator_list_opt: init_declarator_list
   80                         | %empty

   81 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   82                       | type_specifier declaration_specifiers_opt
   83                       | type_qualifier declaration_specifiers_opt
   84                       | function_specifier declaration_specifiers_opt

   85 declaration_specifiers_opt: declaration_specifiers
   86                           | %empty

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list ',' init_declarator

   89 init_declarator: declarator
   90                | declarator '=' initializer

   91 storage_class_specifier: EXTERN
   92                        | STATIC
   93                        | AUTO
   94                        | REGISTER

   95 type_specifier: VOID
   96               | CHAR
   97               | SHORT
   98               | INT
   99               | LONG
  100               | FLOAT
  101               | DOUBLE
  102               | SIGNED
  103               | UNSIGNED
  104               | BOOL
  105               | COMPLEX
  106               | IMAGINARY
  107               | enum_specifier

  108 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  109                         | type_qualifier specifier_qualifier_list_opt

  110 specifier_qualifier_list_opt: specifier_qualifier_list
  111                             | %empty

  112 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  113               | ENUM identifier_opt '{' enumerator_list ',' '}'
  114               | ENUM IDENTIFIER

  115 identifier_opt: IDENTIFIER
  116               | %empty

  117 enumerator_list: enumerator
  118                | enumerator_list ',' enumerator

  119 enumerator: IDENTIFIER
  120           | IDENTIFIER '=' constant_expression

  121 type_qualifier: CONST
  122               | RESTRICT
  123               | VOLATILE

  124 function_specifier: INLINE

  125 declarator: pointer_opt direct_declarator

  126 pointer_opt: pointer
  127            | %empty

  128 direct_declarator: IDENTIFIER
  129                  | '(' declarator ')'
  130                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  131                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  132                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  133                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  134                  | direct_declarator '(' parameter_type_list ')'
  135                  | direct_declarator '(' identifier_list_opt ')'

  136 type_qualifier_list_opt: type_qualifier_list
  137                        | %empty

  138 assignment_expression_opt: assignment_expression
  139                          | %empty

  140 identifier_list_opt: identifier_list
  141                    | %empty

  142 pointer: '*' type_qualifier_list_opt
  143        | '*' type_qualifier_list_opt pointer

  144 type_qualifier_list: type_qualifier
  145                    | type_qualifier_list type_qualifier

  146 parameter_type_list: parameter_list
  147                    | parameter_list ',' THREE_DOTS

  148 parameter_list: parameter_declaration
  149               | parameter_list ',' parameter_declaration

  150 parameter_declaration: declaration_specifiers declarator
  151                      | declaration_specifiers

  152 identifier_list: IDENTIFIER
  153                | identifier_list ',' IDENTIFIER

  154 type_name: specifier_qualifier_list

  155 initializer: assignment_expression
  156            | '{' initializer_list '}'
  157            | '{' initializer_list ',' '}'

  158 initializer_list: designation_opt initializer
  159                 | initializer_list ',' designation_opt initializer

  160 designation_opt: designation
  161                | %empty

  162 designation: designator_list '='

  163 designator_list: designator
  164                | designator_list designator

  165 designator: '[' constant_expression ']'
  166           | '.' IDENTIFIER

  167 statement: labeled_statement
  168          | compound_statement
  169          | expression_statement
  170          | selection_statement
  171          | iteration_statement
  172          | jump_statement

  173 labeled_statement: IDENTIFIER ':' statement
  174                  | CASE constant_expression ':' statement
  175                  | DEFAULT ':' statement

  176 compound_statement: '{' block_item_list_opt '}'

  177 block_item_list_opt: block_item_list
  178                    | %empty

  179 block_item_list: block_item
  180                | block_item_list block_item

  181 block_item: declaration
  182           | statement

  183 expression_statement: expression_opt

  184 expression_opt: expression
  185               | %empty

  186 selection_statement: IF '(' expression ')' statement
  187                    | IF '(' expression ')' statement ELSE statement
  188                    | SWITCH '(' expression ')' statement

  189 iteration_statement: WHILE '(' expression ')' statement
  190                    | DO statement WHILE '(' expression ')' ';'
  191                    | FOR '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
  192                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement

  193 jump_statement: GOTO IDENTIFIER ';'
  194               | CONTINUE ';'
  195               | BREAK ';'
  196               | RETURN expression_opt ';'

  197 translation_unit: external_declaration
  198                 | translation_unit external_declaration

  199 external_declaration: function_definition
  200                     | declaration

  201 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  202 declaration_list_opt: declaration_list
  203                     | %empty

  204 declaration_list: declaration
  205                 | declaration_list declaration


Terminals, with rules where they appear

END (0) 0
'!' (33) 29
'%' (37) 35
'&' (38) 24 51
'(' (40) 4 7 12 13 23 31 129 134 135 186 187 188 189 190 191 192
')' (41) 4 7 12 13 23 31 129 134 135 186 187 188 189 190 191 192
'*' (42) 25 33 133 142 143
'+' (43) 26 37
',' (44) 13 17 76 88 113 118 147 149 153 157 159
'-' (45) 27 38
'.' (46) 8 166
'/' (47) 34
':' (58) 61 173 174 175
';' (59) 190 191 192 193 194 195 196
'<' (60) 43
'=' (61) 64 90 120 162
'>' (62) 44
'?' (63) 61
'[' (91) 6 130 131 132 133 165
']' (93) 6 130 131 132 133 165
'^' (94) 53
'{' (123) 12 13 112 113 156 157 176
'|' (124) 55
'}' (125) 12 13 112 113 156 157 176
'~' (126) 28
error (256)
CONSTANT (258) 2
STRING_LITERAL (259) 3
IDENTIFIER (260) 1 8 9 114 115 119 120 128 152 153 166 173 193
ARROW_ACCESS (261) 9
INCREMENT (262) 10 19
DECREMENT (263) 11 20
SIZEOF (264) 22 23
LEFT_SHIFT (265) 40
RIGHT_SHIFT (266) 41
LESSER_EQUAL (267) 45
GREATER_EQUAL (268) 46
IS_EQUAL (269) 48
NOT_EQUAL (270) 49
LOGICAL_AND (271) 57
LOGICAL_OR (272) 59
MULT_ASSIGN (273) 65
DIV_ASSIGN (274) 66
ADD_ASSIGN (275) 68
SUB_ASSIGN (276) 69
REM_ASSIGN (277) 67
LEFT_SHIFT_ASSIGN (278) 70
RIGHT_SHIFT_ASSIGN (279) 71
BITWISE_AND_ASSIGN (280) 72
BITWISE_XOR_ASSIGN (281) 73
BITWISE_OR_ASSIGN (282) 74
EXTERN (283) 91
STATIC (284) 92 131 132
AUTO (285) 93
REGISTER (286) 94
VOID (287) 95
CHAR (288) 96
SHORT (289) 97
INT (290) 98
LONG (291) 99
FLOAT (292) 100
DOUBLE (293) 101
SIGNED (294) 102
UNSIGNED (295) 103
BOOL (296) 104
COMPLEX (297) 105
IMAGINARY (298) 106
ENUM (299) 112 113 114
CONST (300) 121
RESTRICT (301) 122
VOLATILE (302) 123
INLINE (303) 124
THREE_DOTS (304) 147
CASE (305) 174
DEFAULT (306) 175
IF (307) 186 187
ELSE (308) 187
SWITCH (309) 188
WHILE (310) 189 190
DO (311) 190
FOR (312) 191 192
GOTO (313) 193
CONTINUE (314) 194
BREAK (315) 195
RETURN (316) 196
STRUCT (317)
TYPEDEF (318)
UNION (319)


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
primary_expression (90)
    on left: 1 2 3 4, on right: 5
postfix_expression (91)
    on left: 5 6 7 8 9 10 11 12 13, on right: 6 7 8 9 10 11 18
argument_expression_list_opt (92)
    on left: 14 15, on right: 7
argument_expression_list (93)
    on left: 16 17, on right: 14 17
unary_expression (94)
    on left: 18 19 20 21 22 23, on right: 19 20 22 30 63
unary_operator (95)
    on left: 24 25 26 27 28 29, on right: 21
cast_expression (96)
    on left: 30 31, on right: 21 31 32 33 34 35
multiplicative_expression (97)
    on left: 32 33 34 35, on right: 33 34 35 36 37 38
additive_expression (98)
    on left: 36 37 38, on right: 37 38 39 40 41
shift_expression (99)
    on left: 39 40 41, on right: 40 41 42 43 44 45 46
relational_expression (100)
    on left: 42 43 44 45 46, on right: 43 44 45 46 47 48 49
equality_expression (101)
    on left: 47 48 49, on right: 48 49 50 51
and_expression (102)
    on left: 50 51, on right: 51 52 53
exclusive_or_expression (103)
    on left: 52 53, on right: 53 54 55
inclusive_or_expression (104)
    on left: 54 55, on right: 55 56
logical_and_expression (105)
    on left: 56 57, on right: 57 58 59
logical_or_expression (106)
    on left: 58 59, on right: 57 59 60 61
conditional_expression (107)
    on left: 60 61, on right: 61 62 77
assignment_expression (108)
    on left: 62 63, on right: 16 17 63 75 76 131 132 138 155
assignment_operator (109)
    on left: 64 65 66 67 68 69 70 71 72 73 74, on right: 63
expression (110)
    on left: 75 76, on right: 4 6 61 76 184 186 187 188 189 190
constant_expression (111)
    on left: 77, on right: 120 165 174
declaration (112)
    on left: 78, on right: 181 192 200 204 205
init_declarator_list_opt (113)
    on left: 79 80, on right: 78
declaration_specifiers (114)
    on left: 81 82 83 84, on right: 78 85 150 151 201
declaration_specifiers_opt (115)
    on left: 85 86, on right: 81 82 83 84
init_declarator_list (116)
    on left: 87 88, on right: 79 88
init_declarator (117)
    on left: 89 90, on right: 87 88
storage_class_specifier (118)
    on left: 91 92 93 94, on right: 81
type_specifier (119)
    on left: 95 96 97 98 99 100 101 102 103 104 105 106 107, on right:
    82 108
specifier_qualifier_list (120)
    on left: 108 109, on right: 110 154
specifier_qualifier_list_opt (121)
    on left: 110 111, on right: 108 109
enum_specifier (122)
    on left: 112 113 114, on right: 107
identifier_opt (123)
    on left: 115 116, on right: 112 113
enumerator_list (124)
    on left: 117 118, on right: 112 113 118
enumerator (125)
    on left: 119 120, on right: 117 118
type_qualifier (126)
    on left: 121 122 123, on right: 83 109 144 145
function_specifier (127)
    on left: 124, on right: 84
declarator (128)
    on left: 125, on right: 89 90 129 150 201
pointer_opt (129)
    on left: 126 127, on right: 125
direct_declarator (130)
    on left: 128 129 130 131 132 133 134 135, on right: 125 130 131
    132 133 134 135
type_qualifier_list_opt (131)
    on left: 136 137, on right: 130 131 133 142 143
assignment_expression_opt (132)
    on left: 138 139, on right: 130
identifier_list_opt (133)
    on left: 140 141, on right: 135
pointer (134)
    on left: 142 143, on right: 126 143
type_qualifier_list (135)
    on left: 144 145, on right: 132 136 145
parameter_type_list (136)
    on left: 146 147, on right: 134
parameter_list (137)
    on left: 148 149, on right: 146 147 149
parameter_declaration (138)
    on left: 150 151, on right: 148 149
identifier_list (139)
    on left: 152 153, on right: 140 153
type_name (140)
    on left: 154, on right: 12 13 23 31
initializer (141)
    on left: 155 156 157, on right: 90 158 159
initializer_list (142)
    on left: 158 159, on right: 12 13 156 157 159
designation_opt (143)
    on left: 160 161, on right: 158 159
designation (144)
    on left: 162, on right: 160
designator_list (145)
    on left: 163 164, on right: 162 164
designator (146)
    on left: 165 166, on right: 163 164
statement (147)
    on left: 167 168 169 170 171 172, on right: 173 174 175 182 186
    187 188 189 190 191 192
labeled_statement (148)
    on left: 173 174 175, on right: 167
compound_statement (149)
    on left: 176, on right: 168 201
block_item_list_opt (150)
    on left: 177 178, on right: 176
block_item_list (151)
    on left: 179 180, on right: 177 180
block_item (152)
    on left: 181 182, on right: 179 180
expression_statement (153)
    on left: 183, on right: 169
expression_opt (154)
    on left: 184 185, on right: 183 191 192 196
selection_statement (155)
    on left: 186 187 188, on right: 170
iteration_statement (156)
    on left: 189 190 191 192, on right: 171
jump_statement (157)
    on left: 193 194 195 196, on right: 172
translation_unit (158)
    on left: 197 198, on right: 0 198
external_declaration (159)
    on left: 199 200, on right: 197 198
function_definition (160)
    on left: 201, on right: 199
declaration_list_opt (161)
    on left: 202 203, on right: 201
declaration_list (162)
    on left: 204 205, on right: 202 205


State 0

    0 $accept: . translation_unit END

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    ENUM       shift, and go to state 17
    CONST      shift, and go to state 18
    RESTRICT   shift, and go to state 19
    VOLATILE   shift, and go to state 20
    INLINE     shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   91 storage_class_specifier: EXTERN .

    $default  reduce using rule 91 (storage_class_specifier)


State 2

   92 storage_class_specifier: STATIC .

    $default  reduce using rule 92 (storage_class_specifier)


State 3

   93 storage_class_specifier: AUTO .

    $default  reduce using rule 93 (storage_class_specifier)


State 4

   94 storage_class_specifier: REGISTER .

    $default  reduce using rule 94 (storage_class_specifier)


State 5

   95 type_specifier: VOID .

    $default  reduce using rule 95 (type_specifier)


State 6

   96 type_specifier: CHAR .

    $default  reduce using rule 96 (type_specifier)


State 7

   97 type_specifier: SHORT .

    $default  reduce using rule 97 (type_specifier)


State 8

   98 type_specifier: INT .

    $default  reduce using rule 98 (type_specifier)


State 9

   99 type_specifier: LONG .

    $default  reduce using rule 99 (type_specifier)


State 10

  100 type_specifier: FLOAT .

    $default  reduce using rule 100 (type_specifier)


State 11

  101 type_specifier: DOUBLE .

    $default  reduce using rule 101 (type_specifier)


State 12

  102 type_specifier: SIGNED .

    $default  reduce using rule 102 (type_specifier)


State 13

  103 type_specifier: UNSIGNED .

    $default  reduce using rule 103 (type_specifier)


State 14

  104 type_specifier: BOOL .

    $default  reduce using rule 104 (type_specifier)


State 15

  105 type_specifier: COMPLEX .

    $default  reduce using rule 105 (type_specifier)


State 16

  106 type_specifier: IMAGINARY .

    $default  reduce using rule 106 (type_specifier)


State 17

  112 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  113               | ENUM . identifier_opt '{' enumerator_list ',' '}'
  114               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 116 (identifier_opt)

    identifier_opt  go to state 33


State 18

  121 type_qualifier: CONST .

    $default  reduce using rule 121 (type_qualifier)


State 19

  122 type_qualifier: RESTRICT .

    $default  reduce using rule 122 (type_qualifier)


State 20

  123 type_qualifier: VOLATILE .

    $default  reduce using rule 123 (type_qualifier)


State 21

  124 function_specifier: INLINE .

    $default  reduce using rule 124 (function_specifier)


State 22

  200 external_declaration: declaration .

    $default  reduce using rule 200 (external_declaration)


State 23

   78 declaration: declaration_specifiers . init_declarator_list_opt
  201 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    '*'  shift, and go to state 34

    IDENTIFIER  reduce using rule 127 (pointer_opt)
    '('         reduce using rule 127 (pointer_opt)
    $default    reduce using rule 80 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    declarator                go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40


State 24

   81 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    ENUM       shift, and go to state 17
    CONST      shift, and go to state 18
    RESTRICT   shift, and go to state 19
    VOLATILE   shift, and go to state 20
    INLINE     shift, and go to state 21
